--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 __pycache__/
 *.py[cod]
 *$py.class
+.idea/411-group-project.iml
+.idea/deployment.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/workspace.xml
